commit on master

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <title>CEA</title>
   </head>
   <body>
-    <div id="root">Not rendered</div>
+    <div id="root">Loading...</div>
     <script src="App.js"></script>
   </body>
 </html>
