commit on master

--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,11 @@
   <body>
     <div id="root">Loading...</div>
     <script src="App.js"></script>
+    <footer>
+      Coded by
+      <a target="_blank" href="https://github.com/aryamanrishabh"
+        >@Aryaman Rishabh</a
+      >
+    </footer>
   </body>
 </html>
